--- a/.yabairc
+++ b/.yabairc
@@ -53,7 +53,7 @@ yabai -m rule --add app="^(Safari|Spotify)$" space=1
 yabai -m rule --add app="^(Code|Notion|iTerm2|GitHub Desktop)$" space=2
 # Workspace 3 | Work
 yabai -m rule --add app="^(Microsoft Teams (work or school)|Microsoft Edge|Microsoft Outlook|WorkSpacesClient.macOS|Conrab Opto|Microsoft Word)$" space=3
-yabai -m rule --add title="^(Berg, Patrik 502)$" space=3
+yabai -m rule --add title="^Berg, Patrik 502$" space=3
 # Workspace 4 | MacOS VM
 yabai -m rule --add app="^(macOS 12 VM$)" space=4
 # Workspace 5 | Kali Linux VM (Hackspace)
